# movieRAG

./: .gitignore  CLAUDE.md  README.md  asr.py  extract_asr.py  pipeline.py  pyproject.toml  rag_build.py  rag_build_slide.py  rag_search.py  rag_search_slide.py  requirements.txt
eval/: dump_qwen_scores.py  eval.sh  eval_qg_quality.py  eval_rag_quality.py
eval/claude_knowledge/: RAG-EVAL_QWEN-3-VL30b.json
eval/previous_qg/: human_eval.json
extract/: pipeline.py  proper_nouns_global.py  rag_build.py  rag_build_slide.py  rag_search.py  rag_search_slide.py  slide_checker.py
movie/大分大学入門/: qg_result.json  result.json
movie/情報ネットワーク/: result.json
qg/: chunker.py  qg_direct.py  qg_rag.py  qg_rag_cot.py  seed_extractor.py  usage.md
rag/: embeddings.py  indexer.py  retriever.py
slide_base_rag/: indexer.py  retriever.py
